Bug 397288: use CreateGlyphRunsItemizing when CreateGlyphRunsFast fails. r+a=pavlov